# libhy_mcu

./: .gitignore  build.sh  configure.ac  hy_mcu.pc.in
example/: Makefile.am
include/: Makefile.am  hy_mcu.h
include/stm32/: Makefile.am
include/stm32/cmsis/: Makefile.am
include/stm32/cmsis/core/: Makefile.am
include/stm32/cmsis/stm32h7xx/: Makefile.am
include/stm32/device/: Makefile.am  stm32h7xx_hal_conf.h
include/stm32/device/stm32h7xx/: Makefile.am  stm32h7xx_hal_def.h
include/stm32/device/stm32h7xx/Legacy/: Makefile.am
m4/: select_chip.m4  select_vender.m4
src/: Makefile.am  hy_mcu.c
src/stm32/: Makefile.am
src/stm32/stm32h7xx/: Makefile.am
src/stm32/stm32h7xx/Legacy/: Makefile.am
test/: Makefile.am
