# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    16/08 2023 10:57
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        16/08 2023      create the file
# 
#     last modified: 16/08 2023 10:57
# ===============================================================

SUBDIRS = Legacy

# ------------------
# defining variables
# ------------------
_no_install_headers_com =
_install_headers_com    =

install_includedir      = $(includedir)/$(project_name)

# ---------------------
# add necessary content
# ---------------------
_no_install_headers_com +=

_install_headers_com    += \
                           stm32h7xx_hal_dma2d.h \
                           stm32h7xx_hal_hsem.h \
                           stm32h7xx_hal_ospi.h \
                           stm32h7xx_hal_smartcard_ex.h \
                           stm32h7xx_hal_dma_ex.h \
                           stm32h7xx_hal_i2c_ex.h \
                           stm32h7xx_hal_otfdec.h \
                           stm32h7xx_hal_smartcard.h \
                           stm32h7xx_hal_dma.h \
                           stm32h7xx_hal_i2c.h \
                           stm32h7xx_hal_pcd_ex.h \
                           stm32h7xx_hal_smbus_ex.h \
                           stm32h7xx_hal_adc_ex.h \
                           stm32h7xx_hal_dsi.h \
                           stm32h7xx_hal_i2s_ex.h \
                           stm32h7xx_hal_pcd.h \
                           stm32h7xx_hal_smbus.h \
                           stm32h7xx_hal_adc.h \
                           stm32h7xx_hal_dts.h \
                           stm32h7xx_hal_i2s.h \
                           stm32h7xx_hal_pssi.h \
                           stm32h7xx_hal_spdifrx.h \
                           stm32h7xx_hal_cec.h \
                           stm32h7xx_hal_eth_ex.h \
                           stm32h7xx_hal_irda_ex.h \
                           stm32h7xx_hal_pwr_ex.h \
                           stm32h7xx_hal_spi_ex.h \
                           stm32h7xx_hal_comp.h \
                           stm32h7xx_hal_eth.h \
                           stm32h7xx_hal_irda.h \
                           stm32h7xx_hal_pwr.h \
                           stm32h7xx_hal_spi.h \
                           stm32h7xx_hal_conf_template.h \
                           stm32h7xx_hal_exti.h \
                           stm32h7xx_hal_iwdg.h \
                           stm32h7xx_hal_qspi.h \
                           stm32h7xx_hal_sram.h \
                           stm32h7xx_hal_cordic.h \
                           stm32h7xx_hal_fdcan.h \
                           stm32h7xx_hal_jpeg.h \
                           stm32h7xx_hal_ramecc.h \
                           stm32h7xx_hal_swpmi.h \
                           stm32h7xx_hal_cortex.h \
                           stm32h7xx_hal_flash_ex.h \
                           stm32h7xx_hal_lptim.h \
                           stm32h7xx_hal_rcc_ex.h \
                           stm32h7xx_hal_tim_ex.h \
                           stm32h7xx_hal_crc_ex.h \
                           stm32h7xx_hal_flash.h \
                           stm32h7xx_hal_ltdc_ex.h \
                           stm32h7xx_hal_rcc.h \
                           stm32h7xx_hal_tim.h \
                           stm32h7xx_hal_crc.h \
                           stm32h7xx_hal_fmac.h \
                           stm32h7xx_hal_ltdc.h \
                           stm32h7xx_hal_rng_ex.h \
                           stm32h7xx_hal_uart_ex.h \
                           stm32h7xx_hal_cryp_ex.h \
                           stm32h7xx_hal_gfxmmu.h \
                           stm32h7xx_hal_mdios.h \
                           stm32h7xx_hal_rng.h \
                           stm32h7xx_hal_uart.h \
                           stm32h7xx_hal_cryp.h \
                           stm32h7xx_hal_gpio_ex.h \
                           stm32h7xx_hal_mdma.h \
                           stm32h7xx_hal_rtc_ex.h \
                           stm32h7xx_hal_usart_ex.h \
                           stm32h7xx_hal_dac_ex.h \
                           stm32h7xx_hal_gpio.h \
                           stm32h7xx_hal_mmc_ex.h \
                           stm32h7xx_hal_rtc.h \
                           stm32h7xx_hal_usart.h \
                           stm32h7xx_hal_dac.h \
                           stm32h7xx_hal.h \
                           stm32h7xx_hal_mmc.h \
                           stm32h7xx_hal_sai_ex.h \
                           stm32h7xx_hal_wwdg.h \
                           stm32h7xx_hal_dcmi.h \
                           stm32h7xx_hal_hash_ex.h \
                           stm32h7xx_hal_nand.h \
                           stm32h7xx_hal_sai.h \
                           stm32h7xx_hal_def.h \
                           stm32h7xx_hal_hash.h \
                           stm32h7xx_hal_nor.h \
                           stm32h7xx_hal_sd_ex.h \
                           stm32h7xx_hal_dfsdm_ex.h \
                           stm32h7xx_hal_hcd.h \
                           stm32h7xx_hal_opamp_ex.h \
                           stm32h7xx_hal_sd.h \
                           stm32h7xx_hal_dfsdm.h \
                           stm32h7xx_hal_hrtim.h \
                           stm32h7xx_hal_opamp.h \
                           stm32h7xx_hal_sdram.h

_install_headers_com    += \
                           stm32h7xx_ll_cordic.h \
                           stm32h7xx_ll_opamp.h \
                           stm32h7xx_ll_cortex.h \
                           stm32h7xx_ll_pwr.h \
                           stm32_assert_template.h \
                           stm32h7xx_ll_crc.h \
                           stm32h7xx_ll_rcc.h \
                           stm32h7xx_ll_crs.h \
                           stm32h7xx_ll_rng.h \
                           stm32h7xx_ll_dac.h \
                           stm32h7xx_ll_rtc.h \
                           stm32h7xx_ll_delayblock.h \
                           stm32h7xx_ll_sdmmc.h \
                           stm32h7xx_ll_dma2d.h \
                           stm32h7xx_ll_spi.h \
                           stm32h7xx_ll_dma.h \
                           stm32h7xx_ll_swpmi.h \
                           stm32h7xx_ll_dmamux.h \
                           stm32h7xx_ll_system.h \
                           stm32h7xx_ll_exti.h \
                           stm32h7xx_ll_tim.h \
                           stm32h7xx_ll_fmac.h \
                           stm32h7xx_ll_usart.h \
                           stm32h7xx_ll_fmc.h \
                           stm32h7xx_ll_usb.h \
                           stm32h7xx_ll_gpio.h \
                           stm32h7xx_ll_utils.h \
                           stm32h7xx_ll_hrtim.h \
                           stm32h7xx_ll_wwdg.h \
                           stm32h7xx_ll_hsem.h \
                           stm32h7xx_ll_i2c.h \
                           stm32h7xx_ll_adc.h \
                           stm32h7xx_ll_iwdg.h \
                           stm32h7xx_ll_bdma.h \
                           stm32h7xx_ll_lptim.h \
                           stm32h7xx_ll_bus.h \
                           stm32h7xx_ll_lpuart.h \
                           stm32h7xx_ll_comp.h \
                           stm32h7xx_ll_mdma.h

# ------------------
# make install files
# ------------------
noinst_HEADERS          = $(_no_install_headers_com)
install_include_HEADERS = $(_install_headers_com)
